# jobser

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.yaml  go.work  go.work.sum
assets/: wordser_architecture.drawio
docker/initdb.d/: 02_auth_schema.sql  03_create_auth_user_account.sql
jobserservice/: go.mod
jobserweb/: Dockerfile  Makefile  go.mod
jobserweb/cmd/jobserweb/: main.go
jobserweb/internal/template/: template.go
jobserweb/internal/template/templates/: signup.html
wordser/: .env-example  Cargo.toml  Dockerfile  README.md  thesaurus_example.json
wordser/src/: main.rs
wordserweb/: Dockerfile  Makefile  go.mod  go.sum
wordserweb/cmd/wordserweb/: main.go
wordserweb/internal/auth/: auth.go  config.go  interface.go  jwt.go
wordserweb/internal/handlers/: analyze.go  dashboard.go  interface.go  login.go  signup.go  translate.go
wordserweb/internal/static/: static.go
wordserweb/internal/storage/postgres/: config.go  db.go  models.go
wordserweb/internal/template/: template.go
wordserweb/internal/template/templates/: analysis.html  base.html  dashboard.html  login.html  signup.html
