[package]
name = "wordser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
dotenv = "0.15.0"
hyper = "0.14.27"
openssl = "0.10.60"
reqwest = { version = "0.11.22", features = ["blocking", "json", "serde_json"] }
rust-bert = { version = "0.21.0", features = ["download-libtorch", "default"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1", features = ["full"] }
